# rust_user_api_monolith

./: Cargo.toml  README.md
migrations/2024-05-09-154838_create_users/: down.sql  up.sql
migrations/2024-05-10-063735_alter_table_users/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/handler/: user_handler.rs
src/models/: mod.rs  users_model.rs
src/routes/: mod.rs  user_router.rs
src/services/: users.rs
src/shared/: middleware.rs  mod.rs  response.rs
