[package]
name = "user_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
diesel = {version = "2.1.0",features = ["postgres","r2d2"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
rocket ={version = "0.5.0-rc.2",features = ["json"]}
serde = {version = "1.0.147",features = ["derive"]}
serde_json = "1.0.88"

